# starrocks-admin

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FRONTEND_PERFORMANCE_REVIEW.md  MCP_FEEDBACK_SETUP.md  METRICS_COLLECTION_ARCHITECTURE.md  Makefile  README.md  ！
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
backend/: CODE_REVIEW_REPORT.md  Cargo.toml  REFACTORING_GUIDE.md  build.rs  test_permission_extraction
backend/locales/: en.json  zh.json
backend/migrations/: 20250126000000_rbac_complete_permission_system.sql  20250126000000_rbac_permission_system.sql  20250127000000_add_organization_system.sql  20250128000000_add_deployment_mode.sql  20250128000000_add_llm_tables.sql  20250129000000_add_llm_permissions.sql  20250201000000_add_clusters_active_permission.sql  20250204000000_remove_operator_viewer_roles.sql  20251210000000_add_sql_diagnose_permission.sql  20251212000000_add_configs_permission.sql
backend/src/: config.rs  embedded.rs  lib.rs  main.rs
deploy/chart/: Chart.yaml  README.md  values.yaml
deploy/docker/: Dockerfile  docker-compose.yml
docs/: BUILD_IMPROVEMENT_PLAN.md  FRONTEND_SECURITY_AUDIT.md  GHCR_CHECKLIST.md  GHCR_GUIDE.md  METRICS_COLLECTION_ARCHITECTURE.md  QUICK_START_RELEASE.md  RELEASE_GUIDE.md  RELEASE_PROCESS.md  RIGHT_CLICK_MENU_SQL_QUERIES.md  TROUBLESHOOTING_GUIDE.md
frontend/: FRONTEND_OPTIMIZATION_REPORT.md  angular.json  cleanup-unused-code.sh  package-lock.json  package.json
scripts/: bump-version.sh  release.sh
xtask/: Cargo.toml  README.md
(+270 files in other folders)
